samples/_failures_safe/1761377377_a702fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8643118d.c: In function ‘main’:
./samples/SAFE/__tmp_8643118d.c:125:54: error: expected ‘;’ at end of input
  125 |     if (len > 0 && input[len-1] == '\n') input[--len]
      |                                                      ^
      |                                                      ;
./samples/SAFE/__tmp_8643118d.c:125:5: error: expected declaration or statement at end of input
  125 |     if (len > 0 && input[len-1] == '\n') input[--len]
      |     ^~
